--- a/html/google.html
+++ b/html/google.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Google</title>
+
+    <script>
+        function devilwashere(){
+            alert("Made By Devil <3");
+        }
+    </script>
+
 </head>
 <body>
     <div class="container">
@@ -34,8 +41,8 @@
             </div>
 
             <div class="buttons">
-                <button type="button" id="one">Google'de Ara</button>
-                <button type="button" id="two">Kendimi Şanslı Hissediyorum</button>
+                <button type="button" id="one" onclick="devilwashere()">Google'de Ara</button>
+                <button type="button" id="two" onclick="devilwashere()">Kendimi Şanslı Hissediyorum</button>
             </div>
         </div>
 
